added a text-only Header partial

--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -1,4 +1,5 @@
 <div id="mw-wrapper">
+	{{>Header}}
 	<div class="mw-body" id="content" role="main">
 		<div id="siteNotice">{{{html-site-notice}}}</div>
 		{{{html-user-message}}}
