--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -1,3 +1,10 @@
 <header class="ocdla-header">
-    This is the header
+    <div>This is the header</div>
+    <a href="{{link-mainpage}}">
+			{{#data-logos}}
+				{{#icon}}<img src="{{.}}" width="40" height="40">{{/icon}}
+				{{#wordmark}}<img src="{{src}}" width="{{width}}" height="{{height}}">{{/wordmark}}
+				{{^wordmark}}<h1>{{msg-sitetitle}}</h1>{{/wordmark}}
+			{{/data-logos}}
+			</a>
 </header>
