--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -2,7 +2,7 @@
     <div>This is the header</div>
     <a href="{{link-mainpage}}">
 			{{#data-logos}}
-				{{#icon}}<img src="{{.}}" width="40" height="40">{{/icon}}
+				{{#icon}}<img src="{{.}}" width="auto">{{/icon}}
 				{{#wordmark}}<img src="{{src}}" width="{{width}}" height="{{height}}">{{/wordmark}}
 				{{^wordmark}}<h1>{{msg-sitetitle}}</h1>{{/wordmark}}
 			{{/data-logos}}
