--- a/resources/skin.less
+++ b/resources/skin.less
@@ -2,5 +2,7 @@
 @import 'variables.less';
 @import 'Portlet.less';
 @import 'typography.less';
+@import 'layout.less';
 @import 'Header.less';
+@import 'Masthead.less';
 @import 'common.less';
