--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -1,10 +1,10 @@
 <header class="ocdla-header">
-    <div>This is the header</div>
     <a href="{{link-mainpage}}">
 			{{#data-logos}}
-				{{#icon}}<img src="{{.}}" width="auto">{{/icon}}
+				{{#icon}}<img src="{{.}}">{{/icon}}
 				{{#wordmark}}<img src="{{src}}" width="{{width}}" height="{{height}}">{{/wordmark}}
-				{{^wordmark}}<h1>{{msg-sitetitle}}</h1>{{/wordmark}}
+				{{^wordmark}}<h1>{{msg-tagline}}</h1>{{/wordmark}}
 			{{/data-logos}}
 			</a>
+	<div>Strength in Numbers. Fairness in justice.</div>
 </header>
