--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -1,5 +1,15 @@
 <div id="mw-wrapper">
+	<div class="ocdla-header-container">
 	{{>Header}}
+	{{>Masthead}}
+		<!--site navigation-->
+	<div id="site-navigation">
+		{{#data-portlets-sidebar.data-portlets-first}}{{>Portlet}}{{/data-portlets-sidebar.data-portlets-first}}
+		{{#data-portlets-sidebar.array-portlets-rest}}{{>Portlet}}{{/data-portlets-sidebar.array-portlets-rest}}
+		{{#data-portlets.data-languages}}{{>Portlet}}{{/data-portlets.data-languages}}
+	</div>
+	</div>
+	
 	<div class="mw-body" id="content" role="main">
 		<div id="siteNotice">{{{html-site-notice}}}</div>
 		{{{html-user-message}}}
@@ -59,12 +69,8 @@
 			{{#data-actions}}{{>Portlet}}{{/data-actions}}
 		</div>
 		{{/data-portlets}}
-		<div id="site-navigation">
-			{{#data-portlets-sidebar.data-portlets-first}}{{>Portlet}}{{/data-portlets-sidebar.data-portlets-first}}
-			{{#data-portlets-sidebar.array-portlets-rest}}{{>Portlet}}{{/data-portlets-sidebar.array-portlets-rest}}
-			{{#data-portlets.data-languages}}{{>Portlet}}{{/data-portlets.data-languages}}
-		</div>
 	</div>
+	<!--footer-->
 	<div id="footer" class="mw-footer" role="contentinfo" {{{html-user-language-attributes}}}>
 		{{#data-footer}}
 		{{!}}{{#data-icons}}{{>FooterList}}{{/data-icons}}
