tracking navigation links in header and masthead

--- a/resources/Header.less
+++ b/resources/Header.less
@@ -5,19 +5,32 @@
     background-color: #fff;
     padding: 1rem;
     margin: 2rem 0;
+}
+
+.ocdla-header a{
+    display:flex;
     color: @ocdla-blue;
     text-align: center;
-    font-size: 2rem;
-    display:flex;
-}
-
-.ocdla-header img{
-    width: 25vw;
-}
-
-.ocdla-header h1 {
     font-size: 1.5rem;
 }
+
+.ocdla-header a:link{
+   text-decoration: none;
+}
+
+.ocdla-header a:hover{
+    text-decoration: underline;
+ }
+
+.ocdla-header img{
+    width: 20%;
+}
+
+#ocdla-subtitle{
+    color: @ocdla-blue;
+    padding: 0 3rem;
+}
+
 .ocdla-header div{
     position: relative;
 }
