--- a/resources/Masthead.less
+++ b/resources/Masthead.less
@@ -2,12 +2,14 @@
 
 .ocdla-masthead {
     background-color: @ocdla-blue;
+    display: flex;
 }
-#ocdla-masthead-links::before{
+#ocdla-masthead-links{
     display:block;
     background-image: url( "/resources/assets/lod-masthead-white.svg");
     background-repeat: no-repeat;
-    width: 600px;
+    background-position: center;
+    width: 50%;
     height: 200px;
     content: "";
 }
