working on example skin class

--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -55,7 +55,7 @@
 			{{#data-user-interface-preferences}}{{>Portlet}}{{/data-user-interface-preferences}}
 			{{#data-user-menu}}{{>Portlet}}{{/data-user-menu}}
 		</div>
-		<div id="page-tools">
+		<div id="page-tools" class="mw-default-hidden">
 			{{#data-namespaces}}{{>Portlet}}{{/data-namespaces}}
 			{{#data-variants}}{{>Portlet}}{{/data-variants}}
 			{{#data-views}}{{>Portlet}}{{/data-views}}
