--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -9,10 +9,13 @@
 			{{/data-logos}}
 			</a>
 	</header>
+	<h2>{{#entrance}}<span>{{entrance.href}}</span>{{/entrance}}</h2>
 			<!--site navigation-->
 		<div id="site-navigation">
+			<h1>{{data-portlets-sidebar.foo}}</h1>
+			
 			{{#data-portlets-sidebar.data-portlets-first}}{{>Portlet}}{{/data-portlets-sidebar.data-portlets-first}}
-			{{#data-portlets-sidebar.array-portlets-rest}}{{>Portlet}}{{/data-portlets-sidebar.array-portlets-rest}}
+			<div class="mw-default-hidden">{{#data-portlets-sidebar.array-portlets-rest}}{{>Portlet}}{{/data-portlets-sidebar.array-portlets-rest}}</div>
 			{{#data-portlets.data-languages}}{{>Portlet}}{{/data-portlets.data-languages}}
 		</div>
 </div>
