--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -9,10 +9,10 @@
 			{{/data-logos}}
 			</a>
 	</header>
-	<h2>{{#entrance}}<span>{{entrance.href}}</span>{{/entrance}}</h2>
+	<h2>{{#entrance}}<span>{{entrance.entrance-title}} is set in SkinExample</span>{{/entrance}}</h2>
 			<!--site navigation-->
 		<div id="site-navigation">
-			<h1>{{data-portlets-sidebar.foo}}</h1>
+			<h1>{{data-portlets-sidebar.foo}} is on SkinTemplate line 703</h1>
 			
 			{{#data-portlets-sidebar.data-portlets-first}}{{>Portlet}}{{/data-portlets-sidebar.data-portlets-first}}
 			<div class="mw-default-hidden">{{#data-portlets-sidebar.array-portlets-rest}}{{>Portlet}}{{/data-portlets-sidebar.array-portlets-rest}}</div>
