--- a/resources/layout.less
+++ b/resources/layout.less
@@ -1,3 +1,37 @@
+/*taken from article text*/
+body{
+    font-size : 10px;
+    line-height : 14px;
+    letter-spacing : 0.48px;
+    color : #51648F;
+    color : rgb(81, 100, 143);
+}
+
+@media screen{
+    #mw-wrapper {
+        max-width: 100vw;
+        margin: 0 auto;
+        position: relative;
+        padding: 0em;
+    }
+}
+
+a:link{
+    text-decoration: none;
+    color:#51648F;
+}
+a:visited{
+    color:#51648F;
+}
+
+
+h1{
+    font-size : 15px;
+    letter-spacing : 0.24px;
+    color : #51648F;
+    color : rgb(81, 100, 143);
+  }
+
 
 .ocdla-header-container {
     display: flex;
@@ -6,4 +40,56 @@
 
 .mw-default-hidden{
     display: none;
+}
+
+//white bordered buttons 
+#ocdla-masthead-links
+{
+
+background-color: #51648F;;
+}
+#ocdla-masthead-links li{
+    margin-bottom: 1.75rem;
+}
+
+#ocdla-masthead-links a{
+    padding: .5rem;
+    font-family : Avenir;
+    font-size : 10px;
+    letter-spacing : 1.12px;
+    text-transform : uppercase;
+    color : #FFFFFF;
+    color : rgb(255, 255, 255);
+    border-style : Solid;
+  border-color : #FFFFFF;
+  border-color : rgba(255, 255, 255, 1);
+  border-width : 1px;
+  border-radius : 4px;
+ 
+  -moz-border-radius : 4px;
+  -webkit-border-radius : 4px;
+}
+//masthead nav links
+//portlets are li in ul
+.mw-portlet-body ul li
+{
+    font-family : Avenir;
+    font-size : 10px;
+    letter-spacing : 0.47px;
+    color : #51648F;
+    color : rgb(81, 100, 143);
+    border-left: solid 1px #51648F;
+  }
+
+.search-button{
+    border-color : #51648F;
+    border-width : 1px;
+    border-radius : 8px;
+}
+
+#ocdla-subtitle{
+    font-family : Avenir;
+    font-size : 16px;
+    color : #6478A0;
+    color : rgb(100, 120, 160);
 }
