working on navigation styles

--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -2,6 +2,7 @@
 	
 	{{>Header}}
 	{{>Masthead}}
+	{{>MainNavigation}}
 	
 	<div class="mw-body" id="content" role="main">
 		<div id="siteNotice">{{{html-site-notice}}}</div>
