--- a/resources/layout.less
+++ b/resources/layout.less
@@ -1,7 +1,7 @@
 /*taken from article text*/
 body{
-    font-size : 10px;
-    line-height : 14px;
+    font-size : 16px;
+    line-height : 18px;
     letter-spacing : 0.48px;
     color : #51648F;
     color : rgb(81, 100, 143);
@@ -26,7 +26,7 @@ a:visited{
 
 
 h1{
-    font-size : 15px;
+    font-size : 1.5rem;
     letter-spacing : 0.24px;
     color : #51648F;
     color : rgb(81, 100, 143);
@@ -44,14 +44,17 @@ h1{
 
 //masthead nav links
 //portlets are li in ul
+
+.mw-portlet-body ul{
+    display:flex;
+    flex-wrap: wrap;
+}
 .mw-portlet-body ul li
 {
-    font-family : Avenir;
-    font-size : 10px;
-    letter-spacing : 0.47px;
-    color : #51648F;
-    color : rgb(81, 100, 143);
+    FONT-SIZE:.8rem;
     border-left: solid 1px #51648F;
+    margin-right: 1rem;
+    padding: 0 .33rem;
   }
 
 .search-button{
@@ -65,4 +68,31 @@ h1{
     font-size : 16px;
     color : #6478A0;
     color : rgb(100, 120, 160);
+}
+#ocdla-main-navigation{
+    margin-top:1.5rem;
+    display:flex;
+    flex-direction: row;
+}
+
+#ocdla-main-navigation h3{
+    text-transform: uppercase;
+    font-size: 1.25rem;
+    font-weight: 800;
+    color: @ocdla-blue;
+    margin: auto;
+}
+
+.mw-portlet-body{
+    //background-color:red;
+
+}
+
+h2 a:link{
+    text-decoration: none;
+    color:#51648F;
+}
+h2 a:hover{
+    color:@ocdla-gold;
+    text-decoration: none;
 }
