--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -8,5 +8,8 @@
 				{{^wordmark}}<span id="ocdla-subtitle">{{msg-tagline}}</span>{{/wordmark}}
 			{{/data-logos}}
 			</a>
+			<div>
+				Facebook link
+			</div>
 	</header>
 </div>
