--- a/templates/MainNavigation.mustache
+++ b/templates/MainNavigation.mustache
@@ -1,8 +1,24 @@
 <div id="ocdla-main-navigation">
-    <h3>{{#entrance}}<a href={{href}}>{{entrance.entrance-title}}</a>{{/entrance}}</h3>
+    {{#data-search-box}}
+    <div class="ocdla-search">
+		<form action="{{form-action}}" role="search" class="mw-portlet" id="p-search">
+			<input type="hidden" name="title" value="{{page-title}}">
+			<h3>
+				<label for="searchInput">{{msg-search}}</label>
+			</h3>
+			{{{html-input}}}
+			{{{html-button-search}}}
+		</form>
+    </div>
+		{{/data-search-box}}
+
 	<div class="site-navigation">
-        {{#data-portlets-sidebar.data-portlets-first}}{{>Portlet}}{{/data-portlets-sidebar.data-portlets-first}}
-            <div class="mw-default-hidden">{{#data-portlets-sidebar.array-portlets-rest}}{{>Portlet}}{{/data-portlets-sidebar.array-portlets-rest}}</div>
-        {{#data-portlets.data-languages}}{{>Portlet}}{{/data-portlets.data-languages}}
-		</div>
+        <ul>
+            {{#main-navigation-links}}
+                <li>
+                    <a href={{href}}>{{text}}</a>
+                </li>
+            {{/main-navigation-links}}
+        </ul>
+    </div>
 </div>
