--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -1,6 +1,10 @@
 @import 'mediawiki.skin.defaults.less';
+
 #mw-wrapper {
     margin: 0 auto;
     position: relative;
     padding: 0em;
 }
+
+@color-link--visited: #51648F;
+@color-link--visited: #971f1f;
