--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -6,7 +6,7 @@
 	 
 	<div class="mw-body" id="content" role="main">
 		<h3 id="ocdla-main-entrance">{{#entrance}}<a href={{href}}>{{entrance.entrance-title}}</a>{{/entrance}}</h3>
-		    <div class="mw-default-hidden>
+		    <div class="mw-default-hidden">
             {{#data-portlets-sidebar.data-portlets-first}}{{>Portlet}}{{/data-portlets-sidebar.data-portlets-first}}
                 <div class="mw-default-hidden">{{#data-portlets-sidebar.array-portlets-rest}}{{>Portlet}}{{/data-portlets-sidebar.array-portlets-rest}}</div>
             {{#data-portlets.data-languages}}{{>Portlet}}{{/data-portlets.data-languages}}
