--- a/resources/typography.less
+++ b/resources/typography.less
@@ -1,6 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;1,400;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,400;0,600;1,200;1,400;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Prompt:ital,wght@0,400;0,600;1,200;1,400;1,600&display=swap');
 
 /*quick way to add google font BUT not the best way*/
+
+@font-face {
+    font-family: 'Agbalumo';
+    src:"https://fonts.googleapis.com/css2?family=Agbalumo&family=Prompt:ital,wght@0,400;0,600;1,200;1,400;1,600&display=swap"; 
+}
+
 body {
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Agbalumo', sans-serif;
+}
+.ocdla-caps{
+    text-transform: uppercase;
+}
+
+.oclda-masthead-title{
+    font-family: 'Prompt', 'Nunito', sans-serif;
+    font-size: 3rem;
+    font-weight: 600;
+    letter-spacing: 0.4rem;
 }
