--- a/resources/variables.less
+++ b/resources/variables.less
@@ -2,7 +2,11 @@
 @border: #ccc;
 
 @ocdla-blue: #51648f;
+@ocdla-text: #364b79;
 @ocdla-gold: #c4a12e;
 @ocdla-light-blue: #eef1f8;
 @ocdla-med-gold: #e1d196;
 
+@ocdla-font-size: 16px;
+@ocdla-line-height: 1.5;
+@ocdla-letter-spacing: normal;
