--- a/resources/layout.less
+++ b/resources/layout.less
@@ -1,10 +1,9 @@
 /*taken from article text*/
 body{
-    font-size : 16px;
-    line-height : 18px;
-    letter-spacing : 0.48px;
-    color : #51648F;
-    color : rgb(81, 100, 143);
+    font-size : @ocdla-font-size;
+    line-height : @ocdla-line-height;
+    letter-spacing : @ocdla-letter-spacing;
+    color : @ocdla-text;
 }
 
 @media screen{
@@ -20,6 +19,11 @@ body{
     margin: 0 2rem;
 }
 
+
+#firstHeading{
+    color: @ocdla-text;
+    border-bottom: none;
+}
 ul{
     list-style-type: none;
 }
@@ -132,4 +136,13 @@ h2 a:link{
 h2 a:hover{
     color:@ocdla-gold;
     text-decoration: none;
+}
+
+//this only hides the link, it might be better to find out where/ how to set the value in an ovveridden function 'doSectionLink' in SkinExample.php (like is done in Minerva's custom skin class
+.mw-editsection { display:none; }
+
+.mw-parser-output h2 {
+    color: @ocdla-text;
+    background-color: @ocdla-light-blue;
+    border-bottom: none;
 }
